# dataligo

./: LICENSE  README.md  pyproject.toml  requirements.txt  sample_dcx_config.yaml
datacx/: __init__.py  core.py  databases.py  datacx.py  datalakes.py  datawarehouses.py  exceptions.py  nosql.py
datacx/databases/: database.py
datacx/datalakes/: datalake.py  datalakes.py  utils.py
datacx/datawarehouses/: datawarehouse.py  utils.py
datacx/nosql/: nosql.py
dataligo/: __init__.py  core.py  exceptions.py  utils.py
dataligo/databases/: database.py
dataligo/datalakes/: datalake.py  utils.py
dataligo/datawarehouses/: datawarehouse.py  utils.py
dataligo/nosql/: nosql.py
docs/: conf.py  datacx.databases.rst  datacx.datalakes.rst  datacx.datawarehouses.rst  datacx.nosql.rst  datacx.rst  dataligo.databases.rst  dataligo.datalakes.rst  dataligo.datawarehouses.rst  dataligo.nosql.rst  dataligo.rst  index.rst  modules.rst
notebooks/usage/: azureblob.ipynb  gcs.ipynb  s3.ipynb
