[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacx"
version = "0.3.1"
description = "Data Connectors for all data sources"
readme = "README.md"
authors = [{ name = "Vinish M", email = "vinishuchiha@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["connectors", "datalake reader","datawarehouse reader", "dataconnector"]
dependencies = [
    "boto3 >= 1.26.93",
    "google-cloud-storage >= 2.7.0",
    "azure-storage-blob >= 12.15.0",
    "pandas >= 1.0.0",
    "PyYAML",
    "connectorx",
    "snowflake-connector-python[pandas]",
    "mysql-connector-python-rf",
    "elasticsearch > 8.0.0",
    "pymongo",
    # "mariadb",
    "fastparquet",
    "openpyxl",
    "xlrd",
    "xlwt",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/VinishUchiha/datacx"


[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"','version = "{version}"',
]
"datacx/__init__.py" = ["{version}"]
# "README.md" = [
#     "{version}",
#     "{pep440_version}",
# ]

